--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@ body{
 
 :root{
   --color-131921:#131921;
+  --color-3b4149:#3b4149;
+  --color-fedb69:#fedb69;
+  --color-232f3e: #232f3e;
 }
 
 a{
@@ -17,10 +20,73 @@ a{
   display: inline-block;
 }
 
+.form-control:focus{
+  box-shadow: none;
+  border-color: inherit;
+}
+
+.gap-10{
+  gap: 10px;
+}
+
+.gap-15{
+  gap: 15px;
+}
+
+.gap-30{
+  gap: 30px;
+}
 /* Header Part */
 
 .header-top-strip{
   background-color: var(--color-131921);
+  border-bottom: 1px solid var(--color-3b4149);
 }
 
+.header-upper{
+  background-color: var(--color-131921);
+}
+
+.header-bottom{
+  background-color: var(--color-232f3e);
+}
+
+.header-upper .input-group-text{
+  background-color: var(--color-fedb69);
+}
+
+.header-upper .header-upper-links img{
+  width: 35px;
+  height: 35px;
+}
+
+.header-bottom .menu-links a, 
+.header-bottom .dropdown button{
+  color: white;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: 0.3;
+  text-transform: uppercase;
+}
+
+.header-bottom .dropdown button:focus{
+  box-shadow: none;
+}
+
+.header-bottom.dropdown-menu{
+  width: 100%;
+  transform: translate3d(0px,57px,0px) !important;
+}
+
+.header-bottom .dropdown-item{
+  padding: 20px;
+  margin-bottom: 3px;
+  border-bottom: 1px solid var(--color-3b4149);
+}
+
+.header-bottom .dropdown-item:hover{
+  background-color: transparent;
+  color: var(--color-fedb69) !important;
+}
 /* Header Part End Here */
