--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body{
   --color-3b4149:#3b4149;
   --color-fedb69:#fedb69;
   --color-232f3e: #232f3e;
+  --color-bf4800:#bf4800;
 }
 
 a{
@@ -35,6 +36,19 @@ a{
 
 .gap-30{
   gap: 30px;
+}
+
+.button{
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 25px;
+}
+
+.button:hover{
+  background-color: #fedb69;
+  color: white;
 }
 /* Header Part */
 
@@ -90,3 +104,59 @@ a{
   color: var(--color-fedb69) !important;
 }
 /* Header Part End Here */
+
+
+/* Footer Part */
+
+footer{
+  background-color: var(--color-232f3e);
+}
+
+footer:not(:first-child){
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+
+footer .input-group-text{
+  background-color: var(--color-232f3e);
+  color: white;
+  padding: 8px 17px;
+}
+/* Footer End */
+
+
+/* Home Page */
+
+
+.main-banner-content{
+  top: 15%;
+  left: 5%;
+}
+
+.main-banner-content h4{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.main-banner-content h5{
+  font-size: 42px;
+  line-height: 54px;
+  letter-spacing: -2p;
+  font-weight: 500;
+  text-transform: none;
+}
+
+.main-banner-content p{
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+
+
+/* Home Page end */
