--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body{
   --color-fedb69:#fedb69;
   --color-232f3e: #232f3e;
   --color-bf4800:#bf4800;
+  --color-f5f5f5:#f5f5f5;
 }
 
 a{
@@ -159,4 +160,47 @@ footer .input-group-text{
 }
 
 
+.small-banner-content{
+  top: 25%;
+  left: 10%;
+}
+
+.small-banner-content h4{
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.small-banner-content h5{
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -2p;
+  font-weight: 500;
+  text-transform: none;
+}
+
+.small-banner-content p{
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+
+.small-banner{
+  width: 49%;
+}
+
 /* Home Page end */
+
+
+/* Home wrapper 2 */
+
+.home-wrapper-2{
+  background-color: var(--color-f5f5f5);
+}
+
+/* Home wrapper 2 end */
