--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body{
   --color-232f3e: #232f3e;
   --color-bf4800:#bf4800;
   --color-f5f5f5:#f5f5f5;
+  --color-ededed: #ededed;
 }
 
 a{
@@ -204,3 +205,41 @@ footer .input-group-text{
 }
 
 /* Home wrapper 2 end */
+
+
+/* categories */
+
+.categories{
+  background-color: white;
+  box-shadow: #0000001a;
+  padding: 15px;
+}
+
+.categories > div{
+  width: 25%;
+  padding: 10px 10px 10px 20px;
+}
+
+.categories > div >div{
+  width: 60%;
+}
+
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3),
+.categories>div:nth-child(4){
+border-bottom: 1px solid var(--color-ededed);
+}
+
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3),{
+border-right: 1px solid var(--color-ededed);
+}
+
+.categories > div:nth-child(5),
+.categories > div:nth-child(6),
+.categories > div:nth-child(7),{
+border-right: 1px solid var(--color-ededed);
+}
+/* categories end */
