--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,11 @@ body{
   --color-f5f5f5:#f5f5f5;
   --color-ededed: #ededed;
 }
-
+.card-wrapper{
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+}
 a{
   text-decoration: none;
   display: inline-block;
@@ -211,7 +215,7 @@ footer .input-group-text{
 
 .categories{
   background-color: white;
-  box-shadow: #0000001a;
+  box-shadow: 0 0 10px #0000001a;
   padding: 15px;
 }
 
@@ -230,16 +234,3 @@ footer .input-group-text{
 .categories>div:nth-child(4){
 border-bottom: 1px solid var(--color-ededed);
 }
-
-.categories > div:nth-child(1),
-.categories > div:nth-child(2),
-.categories > div:nth-child(3),{
-border-right: 1px solid var(--color-ededed);
-}
-
-.categories > div:nth-child(5),
-.categories > div:nth-child(6),
-.categories > div:nth-child(7),{
-border-right: 1px solid var(--color-ededed);
-}
-/* categories end */
